# uingest

./: .env.example  .gitignore  Dockerfile  README.md  crawled_pages.sql  dbREADME.md  docker-compose.yml  fastmcp-docker-guide.md  operation.md  playtest.py  pyproject.toml  requirements.txt
doc/: ai-prompt-supabase-replace.md
src/: uingest_mcp.py  utils.py
